Modified a couple of things.
ColorChip still null, seemingly no matter what I do. Changed the owner,
some code in ColorPickerView.

--- a/MainStoryboard.storyboard
+++ b/MainStoryboard.storyboard
@@ -791,14 +791,14 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view tag="200" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sfp-Ri-Cwc">
-                                <rect key="frame" x="230" y="167" width="70" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Color Wheel.png" translatesAutoresizingMaskIntoConstraints="NO" id="yuY-TQ-ZHy" customClass="ColorPickerView">
                                 <rect key="frame" x="20" y="252" width="280" height="280"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <view tag="201" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6h-YA-FWz" customClass="ColorPickerView">
+                                <rect key="frame" x="236" y="164" width="64" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -817,7 +817,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     <connections>
                         <outlet property="cancelButton" destination="XHz-em-mVr" id="Y85-PF-jmn"/>
                         <outlet property="catTextField" destination="2iH-FY-eq9" id="22K-yQ-khg"/>
-                        <outlet property="colorView" destination="Sfp-Ri-Cwc" id="OMm-dL-qt0"/>
+                        <outlet property="colorChip" destination="p6h-YA-FWz" id="pLK-MY-sfx"/>
                         <outlet property="pickerImageView" destination="yuY-TQ-ZHy" id="oSR-nX-Jux"/>
                         <outlet property="saveButton" destination="HDq-1x-LQR" id="mWl-EO-Hbm"/>
                     </connections>
